fixed line spacing about

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1063,7 +1063,8 @@ a.button:hover {
 }
 
 #about-tech ul {
-  padding-left: 0;
+  margin-top: 0px;
+  padding-left: 0; 
   list-style-type: none;
 }
 
